Fix misc. issues with modal menu overlap and anon user content.

--- a/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
+++ b/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
@@ -3206,6 +3206,15 @@ body.node-type-manufacturer, body.node-type-product {
   }
 }
 
+.modal {
+  z-index: 10500000;
+}
+
+.modal-backdrop {
+  z-index: 10499990;
+}
+
+
 #notify-me-modal {
   .modal-dialog {
     margin: 8rem auto;
